Edited wiki page UnixBuildXercesC through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2427 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/UnixBuildXercesC.wiki
+++ b/wiki/UnixBuildXercesC.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Xerces should be included with your ubuntu release, so you should be able to install xerces-c using your package manager of choice:
+Xerces should be included into the ubuntu release, so you should be able to install xerces-c using your package manager of choice:
 {{{
 apt-get install libxerces-c2-dev
 }}}
