--- a/wiki/UnixBuildBoinc.wiki
+++ b/wiki/UnixBuildBoinc.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-This is _only_ necessary for building a release for malariacontrol.net. For development of openmalaria boinc-integration can be disabled. For participating in the volunteer computing, goto [malariacontrol.net] or install boinc from your distribution's packages.
+The following instructions are  _only_ necessary for building a release for malariacontrol.net. For development of openmalaria itself,  boinc-integration can be disabled. For participating in the volunteer computing, goto [malariacontrol.net] or install boinc from your distribution's packages.
 
 You may just be able to use the [http://packages.debian.org/search?keywords=boinc-dev boinc-dev] package. Otherwise, read on...
 
