Edited wiki page openmalariaTools through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2430 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/openmalariaTools.wiki
+++ b/wiki/openmalariaTools.wiki
@@ -25,7 +25,7 @@ Alternatively, one can install from source (familiarity with [http://subversion.
     {{{
 svn checkout http://openmalaria.googlecode.com/svn/application_deployment OpenmalariaTools
 }}}
-  * Potentially replace the `application/openMalaria[.exe]` binary.
+  * If needed, replace (update) the `application/openMalaria[.exe]` binary.
 
 = Features =
 
