Edited wiki page Start through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2433 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -51,9 +51,7 @@ The value of a point estimate is greatly enhanced when the variability associate
 
 The core program is written in C++ with a [http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU GPL 2 licence]. 
 
-The source code can be found [http://code.google.com/p/openmalaria/source/browse/ here].  An overview of the status of *openmalaria* software development appears [https://www.ohloh.net/p/openmalaria here].  
-
-Instructions for compiling the code can be found [BuildSystem here].
+ An overview of the status of *openmalaria* software development appears [https://www.ohloh.net/p/openmalaria here].  The source code can be found [http://code.google.com/p/openmalaria/source/browse/ here]. Instructions for compiling the code can be found [BuildSystem here].
 
 == [ModelsOverview Models] ==
 
