--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -47,13 +47,13 @@ The value of a point estimate is greatly enhanced when the variability associate
 
 = Software =
 
-== [Code] ==
+== Code ==
 
 The core program is written in C++ with a [http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU GPL 2 licence]. 
 
- An overview of the status of *openmalaria* software development appears [https://www.ohloh.net/p/openmalaria here].  The source code can be found [http://code.google.com/p/openmalaria/source/browse/ here]. Instructions for compiling the code can be found [BuildSystem here].
+An overview of the status of *openmalaria* software development appears [https://www.ohloh.net/p/openmalaria here].  The source code can be found [http://code.google.com/p/openmalaria/source/browse/ here]. Instructions for compiling the code can be found [BuildSystem here].
 
-== [ModelsOverview Models] ==
+== ModelsOverview Models ==
 
 Each simulation requires implementation of various components, from transmission to within-host parasite dynamics to drug action. These model components are described in more detail [ModelsOverview here]. 
 
