Edited wiki page Start through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2436 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -53,7 +53,7 @@ The core program is written in C++ with a [http://www.gnu.org/licenses/old-licen
 
 An overview of the status of *openmalaria* software development appears [https://www.ohloh.net/p/openmalaria here].  The source code can be found [http://code.google.com/p/openmalaria/source/browse/ here]. Instructions for compiling the code can be found [BuildSystem here].
 
-== ModelsOverview Models ==
+== Models ==
 
 Each simulation requires implementation of various components, from transmission to within-host parasite dynamics to drug action. These model components are described in more detail [ModelsOverview here]. 
 
