--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -51,11 +51,11 @@ The value of a point estimate is greatly enhanced when the variability associate
 
 The core program is written in C++ with a [http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU GPL 2 licence]. 
 
-An overview of the status of *openmalaria* software development appears [https://www.ohloh.net/p/openmalaria here].  The source code can be found [http://code.google.com/p/openmalaria/source/browse/ here]. Instructions for compiling the code can be found [BuildSystem here].
+An overview of the status of *openmalaria* software development appears on ohlo.net  [https://www.ohloh.net/p/openmalaria here].  The source code is stored as part of the google code repository [http://code.google.com/p/openmalaria/source/browse/ here]. Instructions for compiling the code from source can be found on this website [BuildSystem here]. 
 
 == Models ==
 
-Each simulation requires implementation of various components, from transmission to within-host parasite dynamics to drug action. These model components are described in more detail [ModelsOverview here]. 
+Each simulation requires implementation of various submodels, or model components, from transmission to within-host parasite dynamics to drug action. These model components are detailed in our publications, and on this website [ModelsOverview here]. 
 
 = Team =
 
