--- a/wiki/Binaries.wiki
+++ b/wiki/Binaries.wiki
@@ -1,15 +1,15 @@
 #summary Downloads: OpenMalaria and various other tools
 
-= openmalaria simulator =
+= OpenMalaria simulator =
 
 The simulator can be:
 
-  * installed and used with a graphical user interface, see [openmalariaTools  openmalariaTools]  
+  * installed and used with a graphical user interface, see [openmalariaTools  OpenMalariaTools]  
   * complied from source and run via command line, see [BuildSystem BuildSystem]
   * run over the BOINC volunteer computing network, see [http://malariacontrol.net/  malariacontrol.net ] 
  
 
-We can, upon request, create packages with binaries of the *openmalaria* simulator and a few examples for win32/OS X/linux 32/64-bit platforms. Mac users are invited to follow the build instructions for their operating system. Please ask us for more information if none of the links above provide what you need.
+We can, upon request, create packages with binaries of the *OpenMalaria* simulator and a few examples for win32/OS X/linux 32/64-bit platforms. Mac users are invited to follow the build instructions for their operating system. Please ask us for more information if none of the links above provide what you need.
 
 == Troubleshooting ==
 
